--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,39 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# compiled output
+build
+dist
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
-/.idea
-# testing
-/coverage
+node_modules
 
-# production
-/build
+# environment variables
+*.env*
+!.env.example
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# IDEs and editors
+.c9/
+.classpath
+.idea
+.project
+.settings/
+*.launch
+*.sublime-workspace
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# IDE - VSCode
+.vscode/*
+!.vscode/extensions.json
+!.vscode/launch.json
+!.vscode/settings.json
+!.vscode/tasks.json
+
+# miscellaneous
+connect.lock
+coverage
+libpeerconnection.log
+npm-debug.log
+testem.log
+typings
+.sass-cache
+
+# system files
+.DS_store
+Thumbs.db
