chore(api): set up Mongo database

--- a/api/.env.example
+++ b/api/.env.example
@@ -1,1 +1,7 @@
 API_PORT=4000
+
+DATABASE_NAME=mon_vieux_grimoire_local_database
+DATABASE_PORT=27017
+DATABASE_ROOT_USER_PASSWORD=password
+DATABASE_ROOT_USERNAME=root
+DATABASE_URI=mongodb://root:password@mon-vieux-grimoire-database:27017
