--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcrypt": "5.1.1",
     "dotenv": "16.4.5",
     "express": "4.18.3",
     "mongoose": "8.2.1",
