feat(api): encrypt jwt

--- a/api/.env.example
+++ b/api/.env.example
@@ -5,3 +5,5 @@ DATABASE_PORT=27017
 DATABASE_ROOT_USER_PASSWORD=password
 DATABASE_ROOT_USERNAME=root
 DATABASE_URI=mongodb://root:password@mon-vieux-grimoire-database:27017
+
+JWT_ENCRYPTION_KEY=secretKey
