--- a/api/package.json
+++ b/api/package.json
@@ -11,7 +11,8 @@
     "jsonwebtoken": "9.0.2",
     "mongoose": "8.2.1",
     "mongoose-unique-validator": "5.0.0",
-    "multer": "1.4.5-lts.1"
+    "multer": "1.4.5-lts.1",
+    "sharp": "0.33.3"
   },
   "devDependencies": {
     "nodemon": "3.1.0"
